--- a/style.css
+++ b/style.css
@@ -1,11 +1,42 @@
-header {
-	display: flex;
-	justify-content: space-between;
+* {
+	font-family: 'Montserrat', sans-serif;
 }
 
-.score-counter {
-	display: block;
+body {
+	padding: 0 1rem;
+}
+
+header {
+	display: flex;
+	justify-content: space-around;
+}
+
+h1,
+.score {
+	font-style: italic;
 	font-size: 5rem;
+	font-weight: bold;
+	text-shadow: 0.1rem 0.4rem black;
+}
+
+.start-game-btn,
+.restart-game-btn {
+	border-radius: 1rem;
+	font-size: 4rem;
+	font-style: italic;
+	font-weight: bold;
+	padding: 0.5rem 1rem;
+	box-shadow: 0.4rem 0.4rem black;
+}
+
+.start-game-btn:disabled {
+	box-shadow: none;
+}
+
+.start-game-btn:hover,
+.restart-game-btn:hover {
+	box-shadow: none;
+	transition: box-shadow 0.2s;
 }
 
 .restart-game-btn {
@@ -14,8 +45,15 @@ header {
 
 #game div {
 	border: 1px solid black;
+	border-radius: 1rem;
 	width: 15%;
 	height: 200px;
 	margin: 10px;
 	display: inline-block;
+	box-shadow: 0.4rem 0.4rem black;
+}
+
+#game div:hover {
+	box-shadow: none;
+	transition: box-shadow 0.2s;
 }
