--- a/style.css
+++ b/style.css
@@ -72,3 +72,12 @@ h1,
 	box-shadow: none;
 	transition: box-shadow 0.2s;
 }
+
+footer {
+	position: absolute;
+	bottom: 0;
+	right: 5rem;
+	font-weight: bold;
+	font-style: italic;
+	font-size: 1rem;
+}
